[LargePictureActivity] Delete [MyReportActivity] Add new Views

--- a/app/src/main/res/layout/activity_myreport.xml
+++ b/app/src/main/res/layout/activity_myreport.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fl_myreport"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray0"
@@ -511,5 +512,53 @@
     </LinearLayout>
 
     <include layout="@layout/layout_title" />
+
+    <FrameLayout
+        android:id="@+id/fl_largepicture"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@color/black"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:id="@+id/iv_preservation_report"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="9"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:background="@mipmap/buyinsurance_preservation_report_large" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical">
+
+                <Button
+                    android:id="@+id/btn_backto_myreportactivity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:rotation="90"
+                    android:layout_marginLeft="15dp"
+                    android:background="@null"
+                    android:text="@string/layout_Sure"
+                    android:textSize="20dp"
+                    android:textColor="@color/blue1" />
+            </LinearLayout>
+        </LinearLayout>
+    </FrameLayout>
 
 </FrameLayout>
