--- a/app/src/main/res/layout/activity_personaldata.xml
+++ b/app/src/main/res/layout/activity_personaldata.xml
@@ -373,7 +373,7 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_marginTop="50dp"
-                android:background="#FE2B00"
+                android:background="@drawable/button_pay"
                 android:text="@string/layout_SureToBuy"
                 android:textColor="@color/white"
                 android:textSize="@dimen/textsize_buynow" />
