--- a/app/src/main/res/layout/fragment_historyreport.xml
+++ b/app/src/main/res/layout/fragment_historyreport.xml
@@ -136,7 +136,7 @@
                         android:layout_weight="0.4"
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom"
-                        android:text="保费:"
+                        android:text="@string/layout_Premium"
                         android:textColor="@color/item_rightText"
                         android:textSize="@dimen/textsize_common" />
 
@@ -145,7 +145,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom"
-                        android:text="2456"
+                        android:text="@string/layout_MoneyOfPremium_First"
                         android:textColor="@color/item_rightText"
                         android:textSize="30dp"
                         android:textStyle="bold" />
@@ -291,10 +291,10 @@
 
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="0.4"
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom"
-                        android:text="保费:"
+                        android:layout_weight="0.4"
+                        android:text="@string/layout_Premium"
                         android:textColor="@color/item_rightText"
 
                         android:textSize="@dimen/textsize_common" />
@@ -304,7 +304,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom"
-                        android:text="4532"
+                        android:text="@string/layout_MoneyOfPremium_Second"
                         android:textColor="@color/item_rightText"
                         android:textSize="30dp"
                         android:textStyle="bold" />
