--- a/app/src/main/res/values-mdpi/dimens.xml
+++ b/app/src/main/res/values-mdpi/dimens.xml
@@ -1,2 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <!--layout_title-->
+    <dimen name="com_title_height">62dp</dimen>
+    <dimen name="com_title_size">21dp</dimen>
+    <dimen name="com_title_lateral_size">19dp</dimen>
+    <dimen name="com_title_icon_size">26dp</dimen>
+    <dimen name="com_title_Righticon_size">28dp</dimen>
+    <dimen name="com_title_icon_ll_size">53dp</dimen>
+    <dimen name="com_title_padding">2.5dp</dimen>
+    <dimen name="com_title_margin_left">10dp</dimen>
+
+    <dimen name="com_me_img_head_height_width">45dp</dimen>
+
+</resources>
