--- a/app/src/main/res/values-hdpi/dimens.xml
+++ b/app/src/main/res/values-hdpi/dimens.xml
@@ -1,2 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <!--layout_title-->
+    <dimen name="com_title_height">42dp</dimen>
+    <dimen name="com_title_size">16dp</dimen>
+    <dimen name="com_title_lateral_size">14dp</dimen>
+    <dimen name="com_title_icon_size">20dp</dimen>
+    <dimen name="com_title_Righticon_size">22dp</dimen>
+    <dimen name="com_title_icon_ll_size">45dp</dimen>
+    <dimen name="com_title_padding">2.5dp</dimen>
+    <dimen name="com_title_margin_left">8dp</dimen>
+
+    <dimen name="com_me_img_head_height_width">53dp</dimen>
+
+</resources>
